--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -126,6 +126,8 @@
     }
 
     .edit-main {
+        overflow-y: hidden;
+        
         color: #555;
         background-color: rgb(240, 240, 240);
         padding-top: 40px;
@@ -160,6 +162,7 @@
 
             .ql-editor {
                 line-height: 1.6;
+                overflow-y: auto;
             }
         }
 
