--- a/src/Pages/Edit/text-popup.less
+++ b/src/Pages/Edit/text-popup.less
@@ -5,6 +5,8 @@
 
     .perm-tips {
         .doc-create-btn {
+            font-size: 14px;
+            padding: 6px 12px;
             margin: 1em auto;
             display: inline-block;
         }
