--- a/src/Pages/Edit/EditHeader/edit-header.less
+++ b/src/Pages/Edit/EditHeader/edit-header.less
@@ -56,4 +56,27 @@
             }
         }
     }
+
+    .has-msg-box {
+        text-align: left!important;
+        width: 3em!important;
+        position: relative;
+
+        .hasUnRead {
+            
+            &::after {
+                // content: "G";
+                content: "";
+                top: 50%;
+                transform: translateY(-50%);
+
+                right: 6px;
+                border-radius: 4px;
+                position: absolute;
+                width: 4px;
+                height: 4px;
+                border: 1px solid #A55;
+            }
+        }
+    }
 }
